fix alignment issue in basic information for internship

--- a/src/components/basic-information/basic-information.scss
+++ b/src/components/basic-information/basic-information.scss
@@ -6,8 +6,10 @@ in the Internship Section
 .internship-position-title {
   background-color: rgb(218, 227, 242);
   width: auto;
+/*
   margin-top: -2.5em;
   margin-right: 0.2em;
+  */
 }
 
 .position-name {
@@ -20,14 +22,13 @@ in the Internship Section
 .position-company {
   font-size: 20px;
   float: right;
-  margin-right: 3em;
   color: rgb(31, 80, 140);
   font-weight: bold;
-  margin-top: 0.8em;
+  text-align:right;
 }
 
 .internship-period-row {
-  margin-top: 2px;
+  margin-top: 1em;
 }
 
 .internship-period-title {
